--- a/client/package.json
+++ b/client/package.json
@@ -13,7 +13,7 @@
     "axios": "^1.7.9",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-router-dom": "^7.1.1",
+    "react-router-dom": "5.2.0",
     "react-scripts": "^5.0.1"
   },
   "browserslist": {
