--- a/client/package.json
+++ b/client/package.json
@@ -13,8 +13,9 @@
     "axios": "^1.7.9",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-router-dom": "5.2.0",
-    "react-scripts": "^5.0.1"
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "^5.0.1",
+    "react-toastify": "^11.0.2"
   },
   "browserslist": {
     "production": [
