--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "body-parser": "^1.20.3",
     "express": "^4.21.2",
+    "express-validator": "^7.2.1",
     "mongoose": "^8.9.2",
     "nodemon": "^3.1.9"
   }
